<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreyParrot</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">STOP</string>
    <string name="open">History Files</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="init_reminder">Record Sound Into MP3 File</string>
    <string name="recording_to">Recording to:</string>
	<string name="recordedFile">Recorded to:</string>
	<string name="deletedFileName"> --DELETED--</string>
	<string name="isRecording">GreyParrot is Recording</string>
	<string name="config">Settings</string>
	<string name="help">Help</string>
	<string name="settings">Settings</string>
	<string name="openDir">Open Dir</string>
	<string name="ok">OK</string>
	<string name="fileDir">Files saved at: </string>
	<string name="share">Share</string>
	<string name="send_log">Send Log</string>
	<string name="not_send_log">No</string>
	<string name="sorry">Sorry</string>
	<string name="report_exception"> Something unexpected happened to this APP. Please send the log to us to improve it. </string>
	<string name="private_storage">Use App Private Storage</string>
	<string name="private_storage_summ">The storage can\'t be seen in file browser. And neither can be seen when connected to PC.</string>
	<string name="sample_rate">Sample Rate</string>
	<string name="sample_rate_summary">The higher the better sound quality and the file will be larger</string>
	<string name="album">Album</string>
	<string name="album_summary">Album name of the recorded file</string>
    <string name="author">Author</string>
	<string name="author_summary">Author name in the MP3 file</string>
</resources>